--- a/.gitignore
+++ b/.gitignore
@@ -140,6 +140,5 @@ dmypy.json
 cython_debug/
 
 # Data
+Data/
 samples_data.sqlite
-RussianSamples.GISAID.20210604.csv
-RussianSamples.GISAID.20210604.tab.gz
