--- a/flask/Dockerfile
+++ b/flask/Dockerfile
@@ -2,8 +2,11 @@ FROM python:3.7.2-stretch
 
 WORKDIR /app
 
-ADD . /app
+COPY requirements.txt requirements.txt
+RUN pip3 install -r requirements.txt
 
-RUN pip install -r requirements.txt
+COPY . .
+
+ADD . /app
 
 CMD ["uwsgi", "app.ini"]
