--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,22 @@
 server {
-  listen 80;
+  listen 443 ssl http2;
+  listen [::]:443 ssl http2;
+
+  ssl_certificate /etc/letsencrypt/live/taksametr.ru/fullchain.pem;
+	ssl_certificate_key /etc/letsencrypt/live/taksametr.ru/privkey.pem;
+	ssl_trusted_certificate /etc/letsencrypt/live/taksametr.ru/chain.pem;
+
   location / {
     include uwsgi_params;
     uwsgi_pass flask:8080;
   }
+}
+
+server {
+	listen 80;
+	listen [::]:80;
+
+	location / {
+		return 301 https://taksametr.ru$request_uri;
+	}
 }
