--- a/flask/requirements.txt
+++ b/flask/requirements.txt
@@ -23,6 +23,7 @@ pandas==1.2.2
 parso==0.8.1
 pathspec==0.8.1
 Pygments==2.8.1
+Pillow==8.3.1
 pylint==2.7.2
 pyparsing==2.4.7
 python-dateutil==2.8.1
