--- a/.gitignore
+++ b/.gitignore
@@ -146,3 +146,12 @@ cython_debug/
 # Data
 Data/
 samples_data.sqlite
+
+# Default ignored files
+/shelf/
+/workspace.xml
+# Editor-based HTTP Client requests
+/httpRequests/
+# Datasource local storage ignored files
+/dataSources/
+/dataSources.local.xml
